--- a/src/app/master-layout/navbar/navbar.component.css
+++ b/src/app/master-layout/navbar/navbar.component.css
@@ -1,5 +1,60 @@
+header {
+    position: relative;
+    max-height: 100px;
+    z-index: 1030;
+}
+header .navbar .sidebar-toggle {
+    color: #fff;
+}
+
+header .sidebar-toggle {
+    float: left;
+    background-color: transparent;
+    background-image: none;
+    padding: 15px 15px;
+    font-family: fontAwesome;
+}
+
+header .navbar {
+    -webkit-transition: margin-left .3s ease-in-out;
+    -o-transition: margin-left .3s ease-in-out;
+    transition: margin-left .3s ease-in-out;
+    margin-bottom: 0;
+    margin-left: 230px;
+    border: none;
+    min-height: 50px;
+    border-radius: 0;
+}
+header .navbar {
+    background-color: #3c8dbc;
+}
 
 
 #custom-sidebar .wrapper .sub-menu.show-menu{
     background-color: #6cd6ff;
+}
+header {
+    position: relative;
+    max-height: 100px;
+    z-index: 1030;
+}
+header .logo {
+    -webkit-transition: width .3s ease-in-out;
+    -o-transition: width .3s ease-in-out;
+    transition: width .3s ease-in-out;
+    display: block;
+    float: left;
+    height: 50px;
+    font-size: 20px;
+    line-height: 50px;
+    text-align: center;
+    width: 230px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 0 15px;
+    font-weight: 300;
+    overflow: hidden;
+}
+
+header .navbar-custom-menu, header .navbar-right {
+    float: right;
 }
