--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,1 +1,27 @@
-<p>products works!</p>
+
+<div class="content-wrapper" style="min-height: 1604.71px;">
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1>products Page</h1>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <section class="content">
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Title</h5>
+                
+            </div>
+            <div class="card-body">
+                Start creating your amazing application!
+            </div>
+            <div class="card-footer">
+                Footer
+            </div>
+        </div>
+    </section>
+</div>
